# metaIA-public

./: .gitignore  Dockerfile.Base  Dockerfile.Code  README.md  pyproject.toml
src/: app.py  base_app.py  chat_app.py  test.py
src/agents/: agent_chatbot.py  custom_assistant_agent.py  data_state.py  tools.py
src/prompts/: chitchat_system_message.md  planner_system_message.md
src/utils/: credentials.py  log_config.py
